# HoloScanner

./: .gitignore  holo_scanner.py  main.py  pyproject.toml  settings.py  windows_build.sh
scripts/: build_installer.py
