[project]
name = "holo-scanner"
version = "0.2.0"
description = "Small Tkinter GUI for scanning .holo, HD, EF, and H5 files."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
holoscanner = "holo_scanner:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["holo_scanner"]